# hotwire-native-demo-django

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
frontend/: package-lock.json  package.json  vite.config.mjs
frontend/src/application/: application.js
frontend/src/controllers/: menu_controller.js
hotwiredemo/: apps.py  context_processors.py  urls.py  views.py
hotwiredemo/static/: manifest.json
hotwiredemo/static/assets/: main.js
hotwiredemo/static/js/: application.js
hotwiredemo/static/styles/: app.css
hotwiredemo/templates/: base.html  bridge-form.html  bridge-menu.html  bridge-overflow.html  files.html  index.html  long.html  new.html  numbers.html  one.html  protected.html  redirected.html  reference.html  scroll.html  signin.html  slow.html  success.html  turbo-drive.html  turbo-frames.html  turbo-native.html  turbo-streams.html  two.html
