[project]
name = "hotwire-native-demo-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "argon2-cffi>=23.1.0",
    "django-vite>=3.0.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "pytest>=8.3.3",
]
